fix: resume position, github icon, and date wrapping

--- a/assets/scss/resume.scss
+++ b/assets/scss/resume.scss
@@ -40,8 +40,3 @@ h6 {
   font-size: revert;
   line-height: normal;
 }
-
-h3 {
-  font-size: revert;
-  line-height: normal;
-}
