--- a/assets/scss/resume/_base.scss
+++ b/assets/scss/resume/_base.scss
@@ -22,6 +22,7 @@ html {
 
     @media screen and (min-width: 60rem) {
         margin: 6rem 0;
+        margin-top: 2rem;
         @include shadow(1);
         @include hz-center;
     }
