--- a/assets/scss/resume/_layout.scss
+++ b/assets/scss/resume/_layout.scss
@@ -1,5 +1,5 @@
 .content {
-    position: absolute;
+    position: relative;
     overflow: hidden;
 
     &__left {
