--- a/assets/scss/resume/_mixins.scss
+++ b/assets/scss/resume/_mixins.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin hz-center {
-    position: absolute;
+    position: relative;
     left: 50%;
     transform: translateX(-50%);
 }
