--- a/assets/scss/resume/components/_experience.scss
+++ b/assets/scss/resume/components/_experience.scss
@@ -40,7 +40,7 @@
     &__company,
     &__position {
         text-align: left;
-        width: 70%;
+        width: 60%;
         float: left;
     }
 
@@ -59,7 +59,7 @@
     &__place {
         float: right;
         text-align: right;
-        width: 30%;
+        width: 40%;
         color: $color-secondary;
     }
 
